--- a/client/package.json
+++ b/client/package.json
@@ -60,10 +60,10 @@
     "@types/node": "^14.17.19",
     "@types/react-dom": "^17.0.9",
     "gts": "^3.1.0",
-    "jest": "26.6.0",
+    "jest": "^27.3.1",
     "jest-environment-jsdom": "~27.0",
     "jest-transform-stub": "^2.0.0",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.3"
   }
 }
