--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,4 +11,4 @@ COPY . /server/
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
 # Run the app when the container launches
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
