--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^17.0.24",
     "@types/react-test-renderer": "^17.0.1",
     "@types/winston": "^2.4.4",
+    "dotenv": "^14.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "graphql": "^15.6.0",
     "react": "^17.0.2",
