--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ client/node_modules
 client/build
 client/.eslintcache
 client/package-lock.json
+client/.env
 
 # server ignores
 server/node_modules
@@ -37,3 +38,4 @@ yarn-debug.log*
 yarn-error.log*
 package-lock.json
 node_modules
+lt
