--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "graphql": "^15.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
     "recoil": "^0.1.3",
