--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-test-renderer": "^17.0.2",
     "recoil": "^0.1.3",
     "web-vitals": "^0.2.4",
