--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=8000
-MONGODB_URI=mongodb://mongodb:27017
+MONGODB_URI=mongodb+srv://root:root@cluster0.jvsej.mongodb.net/?retryWrites=true&w=majority
